# playwright_shell

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: auth_profiles.yaml  tasks.yaml
src/playwright_shell/: cli.py  config.py  logging_utils.py  models.py  runtime.py
src/playwright_shell/commands/: __init__.py  infoq.py
src/playwright_shell/services/: auth.py  browser.py  desktop.py  infoq.py  page_analyzer.py
src/playwright_shell/workflows/: base.py  browse.py  collect.py  comment.py  download.py  infoq_article_publish.py  infoq_publish.py  registry.py
tests/: test_auth.py  test_browser.py  test_config.py  test_infoq.py  test_page_analyzer.py  test_registry.py
